index.css
*,
button,
input {
  margin: 0;
  padding: 0;
  border: 0;
  outline: none;
  background: transparent;
  font-size: 100%;
  font-family: "Raleway", sans-serif;
  vertical-align: baseline;
  box-sizing: border-box;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

:root {
  --bg0: hsl(0, 0%, 10%);
  --bg1: hsl(0, 0%, 15%);
  --bg2: hsl(0, 0%, 20%);
  --bg3: hsl(0, 0%, 25%);
  --bg4: hsl(0, 0%, 30%);
  --bg5: hsl(0, 0%, 35%);
  --text: hsl(0, 0%, 90%);
  --text-muted: hsl(0, 0%, 70%);
  --top-highlight-sm: 0px -1px 0px 0px hsl(0, 0%, 50%);
  --top-highlight-md: 0px -2px 0px 0px hsl(0, 0%, 50%);
  --shadow-sm: 0 1px 3px 0 hsla(0, 0%, 0%, 0.1), 0 1px 2px -1px hsla(0, 0%, 0%, 0.1);
  --shadow-md: 0 4px 6px -1px hsla(0, 0%, 0%, 0.1), 0 2px 4px -2px hsla(0, 0%, 0%, 0.1);
  --shadow-lg: 0 10px 15px -3px hsla(0, 0%, 0%, 0.1), 0 4px 6px -4px hsla(0, 0%, 0%, 0.1);
  --radius-sm: 4px;
  --radius-md: 8px;
  --radius-lg: 12px;
  --radius-xl: 16px;
}

body.light-theme {
  --bg0: hsl(0, 0%, 90%);
  --bg1: hsl(0, 0%, 85%);
  --bg2: hsl(0, 0%, 80%);
  --bg3: hsl(0, 0%, 75%);
  --bg4: hsl(0, 0%, 70%);
  --text: hsl(0, 0%, 10%);
  --text-muted: hsl(0, 0%, 30%);
}

body {
  background-color: var(--bg0);
  color: var(--text);
}

.app {
  margin: 0 auto;
  max-width: 72rem;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 4.5rem;
  padding-inline: 2rem;
}

header .logo {
  font-size: 1.125rem;
  font-weight: 700;
}

header > nav ul {
  display: flex;
  gap: 1rem;
}

header > nav a {
  padding: 0.75rem 1rem;
  font-weight: 600;
}

header > nav a.contact {
  padding: 0.75rem 1.5rem;
  border-radius: var(--radius-sm);
  background-color: var(--bg2);
  color: var(--text);
}

header > nav a.contact:hover {
  background-color: var(--bg3);
}

header > div:last-child {
  display: flex;
  align-items: center;
  gap: 1rem;
}

header .theme-button {
  padding: 0.25rem;
  border-radius: var(--radius-sm);
  color: var(--text);
  cursor: pointer;
}

header .theme-button svg {
  display: block;
}

header .language-button {
  display: flex;
  align-self: center;
  gap: 0.25rem;
  padding-block: 0.5rem;
  padding-inline: 0.875rem 0.75rem;
  border-radius: var(--radius-sm);
  background-color: var(--bg2);
  color: var(--text);
  font-size: 0.875rem;
  font-weight: 600;
  cursor: pointer;
}

header .language-button:hover {
  background-color: var(--bg3);
}

header .language-modal {
  width: 7rem;
}

header .menu-modal {
  width: 8rem;
}

header .modal {
  position: absolute;
  top: 100%;
  right: 0%;
  display: none;
  margin-top: 0.75rem;
  border-radius: var(--radius-md);
  background: linear-gradient(0deg, var(--bg1) 0%, var(--bg2) 100%);
  box-shadow: var(--shadow-md), var(--top-highlight-md);
  z-index: 1;
}

header .modal.open {
  display: flex;
  flex-direction: column;
}

header .modal-element {
  display: block;
  text-align: right;
  padding: 0.5rem 1.5rem;
  font-size: 0.875rem;
  color: var(--text-muted);
}

header .modal-element:first-child {
  border-top-left-radius: var(--radius-md);
  border-top-right-radius: var(--radius-md);
}

header .modal-element:last-child {
  border-bottom-left-radius: var(--radius-md);
  border-bottom-right-radius: var(--radius-md);
}

header .modal-element:hover {
  color: var(--text);
  background-color: var(--bg3);
}

header .menu-button {
  display: none;
  padding: 0.25rem;
}

header .menu-button svg {
  display: block;
  transform: scaleX(1.125);
  cursor: pointer;
}

main {
  padding: 0 2rem;
  overflow-x: hidden;
}

section.hero {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 3rem;
  padding: 4rem 0;
  min-height: calc(100vh - 4.5rem);
}

section.hero .text-content {
  max-width: 35rem;
}

section.hero h1 {
  line-height: 1.3;
  font-size: 2.5rem;
  font-weight: 700;
}

section.hero p {
  margin-top: 1rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-muted);
}

section.hero .links {
  margin-top: 2rem;
  display: flex;
  gap: 1rem;
}

section.hero a {
  display: flex;
  align-items: center;
  gap: 0.25rem;
  min-width: 10rem;
  padding: 0.5rem 1.125rem;
  border-radius: var(--radius-md);
  font-weight: 600;
  font-family: "Inter", sans-serif;
}

section.hero a.primary {
  box-shadow: var(--shadow-lg);
  background-color: var(--bg2);
  color: var(--text);
}

section.hero a.primary:hover {
  background-color: var(--bg3);
}

section.hero a.secondary svg {
  display: block;
  padding-right: 0.25rem;
}

section.hero a.secondary:hover {
  background-color: var(--bg1);
}

section.hero img {
  z-index: 1;
  position: relative;
  width: 40vw;
  max-width: 25rem;
  height: auto;
  border-radius: var(--radius-xl);
}

section.hero .blur-highlight {
  position: absolute;
  width: 1px;
  height: 1px;
  border-radius: 50%;
}

section.hero .blur-highlight:first-of-type {
  top: 10%;
  left: 30%;
  box-shadow: 0px 0px 175px 75px hsla(67, 92%, 59%, 0.5);
}

section.hero .blur-highlight:last-of-type {
  bottom: 10%;
  right: 20%;
  box-shadow: 0px 0px 175px 75px hsla(255, 73%, 64%, 0.5);
}

section.products {
  padding-bottom: 6rem;
}

section.products > h1 {
  line-height: 1.3;
  font-size: 2.5rem;
  font-weight: 700;
}

section.products > p {
  margin-top: 1rem;
  max-width: 37rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-muted);
}

section.products ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.5rem;
  margin-top: 4rem;
}

section.products .product-card {
  height: 100%;
  padding: 1.5rem 1.75rem;
  border-radius: var(--radius-lg);
  background: linear-gradient(0deg, var(--bg1) 0%, var(--bg2) 100%);
  box-shadow: var(--shadow-md), var(--top-highlight-md);
  color: var(--text);
}

section.products .product-card h1 {
  margin-top: 0.5rem;
  line-height: 1.3;
  font-size: 1.25rem;
  font-weight: 700;
}

section.products .product-card p {
  margin-top: 0.5rem;
  line-height: 1.5;
  font-size: 0.875rem;
  font-weight: 400;
  color: var(--text-muted);
}

section.pricing {
  padding-bottom: 6rem;
}

section.pricing > h1 {
  line-height: 1.3;
  font-size: 2.5rem;
  font-weight: 700;
}

section.pricing > p {
  margin-top: 1rem;
  max-width: 35rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-muted);
}

section.pricing > div button {
  display: none;
  position: absolute;
  z-index: 1;
  cursor: pointer;
}

section.pricing > div button:nth-child(1) {
  top: 50%;
  right: calc(100% - 1.5rem);
  transform: translateY(-50%);
}

section.pricing > div button:nth-child(2) {
  top: 50%;
  left: calc(100% - 1.5rem);
  transform: translateY(-50%);
}

section .pricing-plans {
  position: relative;
  display: flex;
  justify-content: center;
  gap: 1.875rem;
  margin-top: 4rem;
  padding-block: 0.5rem;
}

section .pricing-plans > button svg {
  display: block;
}

section .pricing-plans .pricing-card {
  width: 22rem;
  flex-shrink: 0;
  padding-block: 1.25rem 3rem;
  padding-inline: 1.75rem 1.5rem;
  border-radius: var(--radius-lg);
  background: linear-gradient(0deg, var(--bg1) 0%, var(--bg2) 100%);
  box-shadow: var(--shadow-md), var(--top-highlight-md);
  color: var(--text);
}

section .pricing-plans .pricing-card:nth-child(2) {
  margin-top: -1.5rem;
  height: calc(100% + 1.5rem);
}

section .pricing-plans .pricing-card h1 {
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 500;
}

section .pricing-plans .pricing-card h2 {
  margin-top: 1.25rem;
  font-size: 1.75rem;
  font-weight: 600;
}

section .pricing-plans .pricing-card:last-child h2 {
  font-size: 1.5rem;
}

section .pricing-plans .pricing-card p {
  margin-top: 1rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-muted);
}

section .pricing-plans .pricing-card a {
  display: inline-block;
  margin-top: 1.25rem;
  padding: 0.5rem 1.5rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 600;
  color: var(--text);
  background: linear-gradient(0deg, var(--bg3) 0%, var(--bg4) 100%);
  box-shadow: var(--shadow-md), var(--top-highlight-sm);
  border-radius: var(--radius-md);
}

section .pricing-plans .pricing-card a:hover {
  background: linear-gradient(0deg, var(--bg4) 0%, var(--bg5) 100%);
}

section .pricing-plans .features {
  margin-top: 1.5rem;
}

section .pricing-plans .features li {
  position: relative;
  padding-left: 1.5rem;
  line-height: 1.5;
  font-size: 1rem;
  font-weight: 400;
  color: var(--text-muted);
}

section .pricing-plans .features li + li {
  margin-top: 0.5rem;
}

section .pricing-plans .features li::before {
  content: "";
  position: absolute;
  top: 0.625rem;
  left: 0.5rem;
  width: 0.1875rem;
  height: 0.1875rem;
  background: var(--text-muted);
  border-radius: 50%;
}

footer {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  padding: 2rem;
  height: 9rem;
}

footer .logo {
  font-size: 1.125rem;
  font-weight: 700;
}

footer .social-links {
  display: flex;
  gap: 0.75rem;
}

footer .social-links a {
  display: block;
  padding: 0.5rem;
}

footer .social-links a svg {
  display: block;
}

footer .social-links a:hover svg {
  fill: var(--text);
}

@media (max-width: 1152px) {
  section.pricing > div button {
    display: block;
  }

  section.pricing .pricing-card:not(.focus) {
    opacity: 0.4;
    filter: blur(2px);
  }
}

@media (max-width: 960px) {
  section.products ul {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 768px) {
  header > nav {
    display: none;
  }

  header div:has(> .language-button) {
    order: -1;
  }

  header .menu-button {
    display: block;
  }

  section.hero .img-container {
    display: none;
  }
}

@media (max-width: 560px) {
  section.products ul {
    grid-template-columns: 1fr;
    gap: 2rem;
  }

  section.products .product-card {
    padding-bottom: 2rem;
  }
}

